--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ enumflags2 = "0.7.1"
 krill-kmip-ttlv = { version = "0.1.0-dev", git = "https://github.com/NLnetLabs/krill-kmip-ttlv.git", branch = "main" }
 serde = "1.0.126"
 serde_derive = "1.0.126"
+serde_bytes = "0.11.5"
 
 [dev-dependencies]
 hex = "0.4.3"
