--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "BSD-3-Clause"
 enum-display-derive = "0.1.1"
 enumflags2 = "0.7.1"
 krill-kmip-ttlv = { version = "0.1.0-dev", git = "https://github.com/NLnetLabs/krill-kmip-ttlv.git", branch = "main" }
+# krill-kmip-ttlv = { version = "0.1.0-dev", path = "../krill-kmip-ttlv" }
 serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
@@ -17,3 +18,4 @@ serde_bytes = "0.11.5"
 [dev-dependencies]
 hex = "0.4.3"
 pretty_assertions = "0.7.2"
+openssl = "0.10.35"
