--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,8 @@ license = "BSD-3-Clause"
 
 [dependencies]
 enum-display-derive = "0.1.1"
-enumflags2 = "0.7.1"
+enum-flags = "0.1.6"
 krill-kmip-ttlv = { version = "0.1.0-dev", git = "https://github.com/NLnetLabs/krill-kmip-ttlv.git", branch = "main" }
-# krill-kmip-ttlv = { version = "0.1.0-dev", path = "../krill-kmip-ttlv" }
 serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
