Only report about actual crate code coverage.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,3 +16,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Cover
         uses: actions-rs/tarpaulin@v0.1
+        with:
+          args: '--exclude-files src/tests/*'
