--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ serde_bytes = "0.11.5"
 hex = "0.4.3"
 pretty_assertions = "0.7.2"
 openssl = "0.10.35"
+
+# for examples/cli-tool
+log = "0.4.14"
+stderrlog = "0.5.1"
+structopt = "0.3.22"
