--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ serde_bytes = "0.11.5"
 hex = "0.4.3"
 pretty_assertions = "0.7.2"
 openssl = "0.10.35"
+rustls = "0.19.1"
+rustls-pemfile = "0.2.1"
+webpki = "0.21.4"
 
 # for examples/cli-tool
 log = "0.4.14"
