More keywords for crates.io.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 description = "KMIP client library"
 repository = "https://github.com/NLnetLabs/kmip/"
 license = "BSD-3-Clause"
-keywords = ["KMIP", "TTLV"]
+keywords = ["KMIP", "TTLV", "serde", "serialization"]
 categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
 exclude = ["/.github"]
 readme = "README.md"
