--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 [dependencies]
 enum-display-derive = "0.1.1"
 enum-flags = "0.1.6"
-kmip-ttlv = "0.1.0"
+kmip-ttlv = "0.1.1"
 serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
@@ -22,7 +22,11 @@ serde_bytes = "0.11.5"
 [dev-dependencies]
 hex = "0.4.3"
 pretty_assertions = "0.7.2"
+
+# for testing tls with openssl
 openssl = "0.10.35"
+
+# for testing tls with rustls
 rustls = "0.19.1"
 rustls-pemfile = "0.2.1"
 webpki = "0.21.4"
