--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "kmip"
+name = "kmip-protocol"
 version = "0.1.0"
 authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
 edition = "2018"
-description = "KMIP client library"
+description = "KMIP protocol object (de)serialization"
 repository = "https://github.com/NLnetLabs/kmip/"
 license = "BSD-3-Clause"
 keywords = ["KMIP", "TTLV", "serde", "serialization"]
