--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,13 @@ build = "build.rs"
 [dependencies]
 enum-display-derive = "0.1.1"
 enum-flags = "0.1.6"
-kmip-ttlv = { git = "https://github.com/NLnetLabs/kmip-ttlv", branch = "main", version = "0.1.3-dev" }
+kmip-ttlv = "0.2.0"
 serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
 
 [build-dependencies]
-rustc_version   = "0.2.3"
+rustc_version   = "0.4.0"
 
 [dev-dependencies]
 hex = "0.4.3"
@@ -39,3 +39,6 @@ webpki = "0.21.4"
 log = "0.4.14"
 stderrlog = "0.5.1"
 structopt = "0.3.22"
+
+# [patch.crates-io]
+# kmip-ttlv = { path = "../krill-kmip-ttlv", version = "0.1.3-dev" }
