Major updates to the demo client: - Reworked the error reporting. - Made it usable from multiple threads. - Use the new kmip-ttlv config read buf and to_diag_string features to trace log requests/responses compactly and stripped of sensitive data, and in error messages too. - Demonstrate thet multi-thread support in the cli-tool. - Use interior mutability in the client to prevent problems in the calling code when wanting multiple simultaneous references which is not possible when calls into the client require &mut self.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,8 @@ build = "build.rs"
 [dependencies]
 enum-display-derive = "0.1.1"
 enum-flags = "0.1.6"
-kmip-ttlv = "0.2.0"
+kmip-ttlv = "0.3.0"
+log = "0.4.14"
 serde = "1.0.126"
 serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
@@ -37,7 +38,7 @@ webpki = "0.21.4"
 
 # for examples/cli-tool
 log = "0.4.14"
-stderrlog = "0.5.1"
+simple-logging = "2.0.2"
 structopt = "0.3.22"
 
 # [patch.crates-io]
