Add tokio-rustls support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ serde_derive = "1.0.126"
 serde_bytes = "0.11.5"
 tokio = { version = "1.11.0", features = ["full"], optional = true }
 tokio-native-tls = { version = "0.3.0", optional = true }
+tokio-rustls = { version = "0.22.0", features = ["dangerous_configuration"], optional = true }
 trait-set = "0.2.0"
 webpki = {version = "0.21.4", optional = true }
 
@@ -45,7 +46,7 @@ async-with-async-std = ["kmip-ttlv/high-level", "async-std", "rustls", "kmip-ttl
 tls-with-openssl = ["sync", "openssl"]
 tls-with-rustls = ["sync", "rustls", "rustls-pemfile", "webpki"]
 tls-with-tokio-native-tls = ["async-with-tokio", "tokio-native-tls"]
-# todo: add tls-with-tokio-rustls
+tls-with-tokio-rustls = ["async-with-tokio", "tokio-rustls", "rustls-pemfile"]
 tls-with-async-tls = ["async-with-async-std", "async-tls", "rustls-pemfile", "webpki" ]
 
 [build-dependencies]
