--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,9 +18,35 @@ jobs:
         # Test against beta Rust to get early warning of any problems that might occur with the upcoming Rust release.
         # Order: oldest Rust to newest Rust.
         rust: [1.47.0, stable, beta]
+        args: [
+          "",
+          "--features sync",
+          "--features tls-with-openssl",
+          "--features tls-with-rustls",
+          "--no-default-features --features sync",
+          "--no-default-features --example demo --features async-with-tokio",
+          "--no-default-features --example demo --features async-with-async-std",
+          "--no-default-features --example demo --features tls-with-openssl",
+          "--no-default-features --example demo --features tls-with-rustls",
+          "--no-default-features --example demo --features tls-with-tokio-native-tls",
+          "--no-default-features --example demo --features tls-with-tokio-rustls",
+          "--no-default-features --example demo --features tls-with-async-tls",
+        ]
     steps:
     - uses: actions/checkout@v2
+
     - name: Build
-      run: cargo build --verbose
+      run: cargo build ${{ matrix.args }} --locked --verbose
+
+  # Don't run the tests without --tests as it then tries to compile the demo example which only works if the correct
+  # accompanying features are enabled.
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        rust: [1.47.0, stable, beta]
+    steps:
+    - uses: actions/checkout@v2
+
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --tests --locked --verbose
