--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,17 @@ default = ["sync"]
 sync = ["kmip-ttlv/high-level", "maybe-async/is_sync", "kmip-ttlv/sync"]
 async-with-tokio = ["kmip-ttlv/high-level", "tokio", "kmip-ttlv/async-with-tokio"]
 async-with-async-std = ["kmip-ttlv/high-level", "async-std", "rustls", "kmip-ttlv/async-with-async-std"]
-tls-with-openssl = ["sync", "openssl"]
-tls-with-rustls = ["sync", "rustls", "rustls-pemfile", "webpki"]
-tls-with-tokio-native-tls = ["async-with-tokio", "tokio-native-tls"]
-tls-with-tokio-rustls = ["async-with-tokio", "tokio-rustls", "rustls-pemfile"]
-tls-with-async-tls = ["async-with-async-std", "async-tls", "rustls-pemfile", "webpki" ]
+tls = []
+tls-with-openssl = ["tls", "sync", "openssl"]
+tls-with-rustls = ["tls", "sync", "rustls", "rustls-pemfile", "webpki"]
+tls-with-tokio-native-tls = ["tls", "async-with-tokio", "tokio-native-tls"]
+tls-with-tokio-rustls = ["tls", "async-with-tokio", "tokio-rustls", "rustls-pemfile"]
+tls-with-async-tls = ["tls", "async-with-async-std", "async-tls", "rustls-pemfile", "webpki" ]
+
+[[example]]
+name = "demo"
+required-features = ["tls"]
+test = false
 
 [build-dependencies]
 rustc_version   = "0.4.0"
