--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,9 +60,9 @@ rustc_version   = "0.4.0"
 
 [dev-dependencies]
 hex = "0.4.3"
-pretty_assertions = "0.7.2"
+pretty_assertions = "1.3.0"
 
 # for examples/demo
 log = "0.4.14"
 simple-logging = "2.0.2"
-structopt = "0.3.22"
+structopt = { version = "0.3.22", default-features = false }
