--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # Test against Rust 1.54.0 because in build.rs we say that is the oldest supported version.
-        # Test against beta Rust to get early warning of any problems that might occur with the upcoming Rust release.
+        # Build against Rust 1.49.0 because in build.rs we say that is the oldest supported version.
+        # Build against beta Rust to get early warning of any problems that might occur with the upcoming Rust release.
+        # Test against Rust 1.54.0 because the test suite needs newer Rust than the library itself.
         # Order: oldest Rust to newest Rust.
-        rust: [1.54.0, stable, beta]
+        rust: [1.49.0, 1.54.0, stable, beta]
     steps:
     - uses: actions/checkout@v2
 
@@ -56,4 +57,5 @@ jobs:
       run: cargo build ${{ matrix.args }} --locked --verbose
 
     - name: Run tests
+      if: matrix.rust != '1.49.0'
       run: cargo test ${{ matrix.args }} --locked --verbose
