--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       run: cargo build --locked --verbose
 
     - name: Run tests
+      if: matrix.rust != '1.49.0'
       run: cargo test --locked --verbose
 
   build_and_test_with_extra_features:
