--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kmip-protocol"
-version = "0.4.4-dev"
+version = "0.5.0"
 authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
 edition = "2018"
 description = "KMIP protocol object (de)serialization"
@@ -22,7 +22,7 @@ async-tls = { version = "0.11.0", default-features = false, features = ["client"
 cfg-if = "1.0.0"
 enum-display-derive = "0.1.1"
 enum-flags = "0.1.6"
-kmip-ttlv = { version = "0.3.4", default-features = false }
+kmip-ttlv = { git = "https://github.com/NLnetLabs/kmip-ttlv", branch = "next", version = "0.4.0", default-features = false }
 log = "0.4.14"
 maybe-async = "0.2.6"
 openssl = { version = "0.10.35", optional = true }
